--- a/public/desktop.ini
+++ b/public/desktop.ini
@@ -1,6 +1,6 @@
 [.ShellClassInfo]
-IconResource=D:\quizapp\public\icon-ico.ico,0
+IconResource=C:\WINDOWS\System32\SHELL32.dll,4
 [ViewState]
 Mode=
 Vid=
-FolderType=Pictures
+FolderType=Generic
